Animation clean up

--- a/index.html
+++ b/index.html
@@ -781,20 +781,20 @@
                             <div class="timeline"></div>
                             <div class="col-md-3 col-sm-10 left-timeline">
                                 <div class=" card-body d-flex flex-column left-wrapper">
-                                    <h4 data-wow-duration="1s" data-wow-delay="1.5s" class="wow fadeInLeftBig">Riders For Life</h4>
-                                    <p data-wow-duration="1s" data-wow-delay="1.6s" class="wow fadeInLeftBig">Oct 2019 - Nov 2019</p>
+                                    <h4 data-wow-duration="1s" data-wow-delay=".5s" class="wow fadeInLeftBig">Riders For Life</h4>
+                                    <p data-wow-duration="1s" data-wow-delay=".6s" class="wow fadeInLeftBig">Oct 2019 - Nov 2019</p>
                                 </div>
                             </div>
                             <div class="col-md-1 icon-timeline">
-                                <div data-wow-duration="1s" data-wow-delay="1.5s" class="wow bounceIn icon-wrapper">
-                                    <i data-wow-duration="1s" data-wow-delay="1.6s" class="wow fadeIn fas fa-briefcase "></i>
+                                <div data-wow-duration="1s" data-wow-delay=".5s" class="wow bounceIn icon-wrapper">
+                                    <i data-wow-duration="1s" data-wow-delay=".6s" class="wow fadeIn fas fa-briefcase "></i>
                                 </div>
                             </div>
 
                             <div class="col-md-8 col-sm-10 right-timeline ">
                                 <div class=" card-body d-flex flex-column right-wrapper">
-                                    <h4 data-wow-duration="1s" data-wow-delay="1.5s" class="wow fadeInRightBig">Web Developer</h4>
-                                    <p data-wow-duration="1s" data-wow-delay="1.6s" class="wow fadeInRightBig">This was a two-part application built for the non-profit Safe Mothers, Safe Babies. The first part was a Node backend that interacted with Frontline SMS and allowed for emergency SMS interaction between users. The React frontend, and the second part of the application, was developed as an admin dashboard that allowed administrators to view, add, delete, and edit user data.
+                                    <h4 data-wow-duration="1s" data-wow-delay=".5s" class="wow fadeInRightBig">Web Developer</h4>
+                                    <p data-wow-duration="1s" data-wow-delay=".6s" class="wow fadeInRightBig">This was a two-part application built for the non-profit Safe Mothers, Safe Babies. The first part was a Node backend that interacted with Frontline SMS and allowed for emergency SMS interaction between users. The React frontend, and the second part of the application, was developed as an admin dashboard that allowed administrators to view, add, delete, and edit user data.
                                     </p>
                                 </div>
                             </div>
@@ -803,20 +803,20 @@
                         <div class="row no-gutters ">
                             <div class="col-md-3 left-timeline">
                                 <div class=" card-body d-flex flex-column left-wrapper">
-                                    <h4 data-wow-duration="1s" data-wow-delay="1.5s" class="wow fadeInLeftBig">5150Whips</h4>
-                                    <p data-wow-duration="1s" data-wow-delay="1.6s" class="wow fadeInLeftBig">2018 - 2019</p>
+                                    <h4 data-wow-duration="1s" data-wow-delay=".5s" class="wow fadeInLeftBig">5150Whips</h4>
+                                    <p data-wow-duration="1s" data-wow-delay=".6s" class="wow fadeInLeftBig">2018 - 2019</p>
                                 </div>
                             </div>
                             <div class="col-md-1 icon-timeline">
-                                <div data-wow-duration="1s" data-wow-delay="1.5s" class="wow bounceIn icon-wrapper">
-                                    <i data-wow-duration="1s" data-wow-delay="1.6s" class="wow fadeIn fas fa-briefcase"></i>
+                                <div data-wow-duration="1s" data-wow-delay=".5s" class="wow bounceIn icon-wrapper">
+                                    <i data-wow-duration="1s" data-wow-delay=".6s" class="wow fadeIn fas fa-briefcase"></i>
                                 </div>
                             </div>
 
                             <div class="col-md-8 right-timeline">
                                 <div class=" card-body d-flex flex-column right-wrapper">
-                                    <h4 data-wow-duration="1s" data-wow-delay="1.5s" class="wow fadeInRightBig">Web Developer & Designer</h4>
-                                    <p data-wow-duration="1s" data-wow-delay="1.6s" class="wow fadeInRightBig">Hired by 5150 whips to fix, maintain, and make updates to the current website. Worked with the owner to create a new website to fit his business needs, company brand, and design aesthetic.
+                                    <h4 data-wow-duration="1s" data-wow-delay=".5s" class="wow fadeInRightBig">Web Developer & Designer</h4>
+                                    <p data-wow-duration="1s" data-wow-delay=".6s" class="wow fadeInRightBig">Hired by 5150 whips to fix, maintain, and make updates to the current website. Worked with the owner to create a new website to fit his business needs, company brand, and design aesthetic.
                                     </p>
                                 </div>
                             </div>
@@ -825,19 +825,19 @@
                         <div class="row no-gutters ">
                             <div class="col-md-3 left-timeline ">
                                 <div class=" card-body d-flex flex-column left-wrapper ">
-                                    <h4 data-wow-duration="1s" data-wow-delay="1.5s" class="wow fadeInLeftBig">Cryptocurrency</h4>
-                                    <p data-wow-duration="1s" data-wow-delay="1.6s" class="wow fadeInLeftBig">Nov 2017 - Jan 2018</p>
+                                    <h4 data-wow-duration="1s" data-wow-delay=".5s" class="wow fadeInLeftBig">Cryptocurrency</h4>
+                                    <p data-wow-duration="1s" data-wow-delay=".6s" class="wow fadeInLeftBig">Nov 2017 - Jan 2018</p>
                                 </div>
                             </div>
                             <div class="col-md-1 icon-timeline">
-                                <div data-wow-duration="1s" data-wow-delay="1.5s" class="wow bounceIn icon-wrapper">
-                                    <i data-wow-duration="1s" data-wow-delay="1.6s" class="wow fadeIn fas fa-briefcase "></i>
+                                <div data-wow-duration="1s" data-wow-delay=".5s" class="wow bounceIn icon-wrapper">
+                                    <i data-wow-duration="1s" data-wow-delay=".6s" class="wow fadeIn fas fa-briefcase "></i>
                                 </div>
                             </div>
                             <div class="col-md-8 right-timeline">
                                 <div class=" card-body d-flex flex-column right-wrapper">
-                                    <h4 data-wow-duration="1s" data-wow-delay="1.5s" class="wow fadeInRightBig">Graphic Designer</h4>
-                                    <p data-wow-duration="1s" data-wow-delay="1.6s" class="wow fadeInRightBig">Designed a Art Deco-inspired cover for a company booklet presentation explaining cryptocurrency, mining cryptocurrency, and how to build and operate a cryptocurrency mining rig.</p>
+                                    <h4 data-wow-duration="1s" data-wow-delay=".5s" class="wow fadeInRightBig">Graphic Designer</h4>
+                                    <p data-wow-duration="1s" data-wow-delay=".6s" class="wow fadeInRightBig">Designed a Art Deco-inspired cover for a company booklet presentation explaining cryptocurrency, mining cryptocurrency, and how to build and operate a cryptocurrency mining rig.</p>
                                 </div>
                             </div>
                         </div>
@@ -972,7 +972,7 @@
         <section id="contact">
             <h1 data-wow-duration="1s" data-wow-delay="1s" class=" wow fadeInDown text-center my-5 section-title">Contact Me</h1>
             <div class="contact-margin">
-                <div data-wow-duration="1.5s" data-wow-delay="1.5s" class=" wow zoomIn container card " id="contact-card">
+                <div data-wow-duration="1.5s" data-wow-delay="1.2s" class=" wow zoomIn container card " id="contact-card">
                     <div class="mx-auto mt-4">
                         <h2 data-wow-duration="1.5s" data-wow-delay="2s" class=" wow fadeInLeftBig contact-title text-center">Let's Get Started</h2>
                         <p data-wow-duration="1.5s" data-wow-delay="2s" class=" wow fadeInRightBig mt-2">Have questions or just want to say hello? Drop me a line bellow!
