Adding a loading spinner

--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
 </head>
 
 <body >
+    <div id="loader" class="overlay">
+        <div class="circle-border">
+            <div class="circle-center"></div>
+        </div>
+        <div class="content"></div>
+    </div>
     <!-- Navigation-->
     <header id="main">
         <nav class="navbar navbar-expand-lg fixed-top" >
@@ -115,12 +121,12 @@
         <!-- May want to change. Put basic info at the bottom in contact area? -->
         <section class="mx-auto mb-5" id="about">
             <h1 data-wow-duration="1s" data-wow-delay="1s" class=" wow fadeInDown text-center mb-5 section-title ">About Me</h1>
-            <div data-wow-duration="1s" data-wow-delay="1.5s" class=" wow fadeInLeft card container section-margin  ">
+            <div data-wow-duration="1s" data-wow-delay="1.5s" class=" wow fadeInLeft card container section-margin ">
                 <div class="row">
                     <div class="col-lg-12 px-4">
-                        <h2 data-wow-duration="1s" data-wow-delay="2s" class="wow fadeIn card-title text-center mt-4">Web Developer, Designer, Musician, Trekkie </h2>
+                        <h2 data-wow-duration="1s" data-wow-delay="2s" class="wow fadeIn card-title text-center mt-5">Web Developer, Designer, Musician, Trekkie </h2>
                         <!-- NEED TO EDIT!!!!! Tell a story with interesting facts musical, dancing, random facts...personalize it! -->
-                        <div card-body">
+                        <div card-body class="mb-5"">
                             <p data-wow-duration="1s" data-wow-delay="2.2s" class="wow fadeIn">Hello! I am a Graphic Designer/Web Developer who enjoys being immersed in a creatively charged atmosphere,  is passionate about design, and learning new technologies. I recently graduated from the Full-Stack Web Development course track at <a class="web-links" href="https://lambdaschool.com/" target="_blank">Lambda School</a>, where I have gained experience with HTML, CSS, JavaScript, React.js, Node.js, Knex.js, and more. 
                             
                             </p>
