--- a/index.html
+++ b/index.html
@@ -56,11 +56,14 @@
 </head>
 
 <body >
-    <div id="loader" class="overlay">
-        <div class="circle-border">
-            <div class="circle-center"></div>
+    <div class="overlay">
+        <div class="loader">
+            <div class="circle-border">
+                <div class="circle-center"></div>
+                
+            </div>
+            <div class="content"></div>
         </div>
-        <div class="content"></div>
     </div>
     <!-- Navigation-->
     <header id="main">
@@ -1091,6 +1094,7 @@
 
     <!-- fontAwesome -->
     <script src="https://kit.fontawesome.com/de25aad685.js"></script>
+    
 
     <!--Custom js -->	
     <script src="./js/index.js"></script>
