--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
 <body >
     <div class="overlay">
         <div class="loader">
-            <div class="circle-border">
-                <div class="circle-center"></div>
-                
+            <div class="outer-circle">
             </div>
-            <div class="content"></div>
+            <div class="center">
+                <span>Loading...</span>
+            </div>
         </div>
     </div>
     <!-- Navigation-->
