Adjusting animations again

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 </head>
 
 <body >
+    <!-- Page Loader -->
     <div class="overlay">
         <div class="loader">
             <div class="outer-circle">
@@ -995,21 +996,21 @@
                                     <!-- <p class="hidden">
                                         <label>Don’t fill this out if you're human: <input name="bot-field" /></label>
                                     </p> -->
-                                    <label  for="newName" data-wow-duration="1.5s" data-wow-delay="2.8s" class=" wow flipInX">Name:</label>
+                                    <label  for="newName" data-wow-duration="1.5s" data-wow-delay=".5s" class=" wow flipInX">Name:</label>
                                     <input type="text" id="newName" name="newName" data-wow-duration="1.5s" data-wow-delay="1.5s" class=" wow flipInX form-control form-control-lg"
                                         placeholder="Your name..." aria-placeholder="Your name..." required>
                                     <div class="valid-feedback">Looks good! Thanks.</div>
                                     <div class="invalid-feedback">Opps! I need a name please. Try again.</div>
                                 </div>
                                 <div class="form-group col-md-12 bottom-margin ">
-                                    <label for="newEmail" data-wow-duration="1.5s" data-wow-delay="2.8s" class=" wow flipInX">Email:</label>
+                                    <label for="newEmail" data-wow-duration="1.5s" data-wow-delay=".5s" class=" wow flipInX">Email:</label>
                                     <input type="text" id="newEmail" name="newEmail" data-wow-duration="1.5s" data-wow-delay="1.5s" class=" wow flipInX form-control form-control-lg"
                                         placeholder="example@email.com" aria-placeholder="example@email.com" required>
                                         <div class="valid-feedback">Looks good! Thanks. </div>
                                         <div class="invalid-feedback">Opps! I need a email please. Try again.</div>
                                 </div>
                                 <div class="form-group col-md-12 bottom-margin ">
-                                    <label for="newPhone" data-wow-duration="1.5s" data-wow-delay="2.8s" class=" wow flipInX">Phone:</label>
+                                    <label for="newPhone" data-wow-duration="1.5s" data-wow-delay=".5s" class=" wow flipInX">Phone:</label>
                                     <input type="text" id="newPhone" name="newPhone" data-wow-duration="1.5s" data-wow-delay="1.5s" class=" wow flipInX form-control form-control-lg"
                                         placeholder="(123)-456-7890" aria-placeholder="(123)-456-7890">
                                 </div>
