--- a/index.html
+++ b/index.html
@@ -985,7 +985,7 @@
                 <div data-wow-duration="1.5s" data-wow-delay="1.2s" class=" wow zoomIn container card " id="contact-card">
                     <div class="mx-auto mt-4">
                         <h2 data-wow-duration="1.5s" data-wow-delay="2s" class=" wow fadeInLeftBig contact-title text-center">Let's Get Started</h2>
-                        <p data-wow-duration="1.5s" data-wow-delay="2s" class=" wow fadeInRightBig mt-2">Have questions or just want to say hello? Drop me a line bellow!
+                        <p data-wow-duration="1.5s" data-wow-delay="2s" class=" wow fadeInRightBig mt-2">Have questions or just want to say hello? Drop me a line below!
                         </p>
                     </div>
                     <!-- Need to center. May not need form-container -->
