Adjusted and added links for riders for life project

--- a/index.html
+++ b/index.html
@@ -372,10 +372,13 @@
                                 </div> <!--End Body-->
                                 <!-- Footer -->
                                 <div class="modal-footer ">
-                                    <a class="modal-btn mr-4" href="https://github.com/Lambda-School-Labs/safe-mothers-fe" target="blank">
+                                    <a class="modal-btn mr-4" href="https://riders4life.now.sh/login" target="blank">
+                                        <i class="fas fa-external-link-square-alt"></i>
+                                    </a>
+                                    <a class="modal-btn mr-4" href="https://github.com/jadeli1720/safe-mothers-fe" target="blank">
                                         <i class="fab fa-react"></i>
                                     </a>
-                                    <a class="modal-btn" href="https://github.com/Lambda-School-Labs/safe-mothers-be" target="blank">
+                                    <a class="modal-btn" href="https://github.com/jadeli1720/safe-mothers-be" target="blank">
                                         <i class="fab fa-node-js"></i>
                                     </a>
                                 </div> <!--End Footer-->
