Updating Viking work experience

--- a/index.html
+++ b/index.html
@@ -873,7 +873,7 @@
                             <div class="col-md-8 col-sm-10 right-timeline ">
                                 <div class=" card-body d-flex flex-column right-wrapper">
                                     <h4 data-wow-duration="1s" data-wow-delay=".5s" class="wow fadeInRightBig">Front End Software Developer</h4>
-                                    <p data-wow-duration="1s" data-wow-delay=".6s" class="wow fadeInRightBig">Responsible for designing the user experience for various storage management applications and creating wireframes/mock-ups through the use of Adobe XD. While working within an Agile, Scrum, and collaborative environment, help team members to develop the UI for applications using HTML5, CSS, JavaScript, and other Javascript frameworks such as Angular and React.
+                                    <p data-wow-duration="1s" data-wow-delay=".6s" class="wow fadeInRightBig">Responsible for designing the user experience for various cloud storage management applications and creating wireframes/mock-ups through the use of Adobe XD. While working within an Agile, Scrum, and collaborative environment, I help team members to develop the UI for applications using HTML5, CSS, Angular, design/component libraries such as Bootstrap and Material UI.
                                     </p>
                                 </div>
                             </div>
