--- a/index.html
+++ b/index.html
@@ -122,10 +122,9 @@
         </section>
 
         <!-- About -->
-        <!-- May want to change. Put basic info at the bottom in contact area? -->
         <section class="mx-auto mb-5" id="about">
             <h1 data-wow-duration="1s" data-wow-delay="1s" class=" wow fadeInDown text-center mb-5 section-title ">About Me</h1>
-            <div data-wow-duration="1s" data-wow-delay="1.5s" class=" wow fadeInLeft card container section-margin ">
+            <div data-wow-duration="1s" data-wow-delay="1.5s" class=" wow fadeInLeft card container section-margin py-0">
                 <div class="row">
                     <div class="col-lg-12 px-4">
                         <h2 data-wow-duration="1s" data-wow-delay="2s" class="wow fadeIn card-title text-center mt-5">Web Developer, Designer, Musician, Trekkie </h2>
@@ -136,7 +135,7 @@
                             </p>
                             <p data-wow-duration="1s" data-wow-delay="2.5s" class="wow fadeIn">These experiences, along with working 14 years in the customer service industry, have taught me creative problem-solving and effective communication skills as well as how to work in teams.  Personally, it is my goal to constantly push myself to learn new things so that I may grow as a designer, developer, and as an individual.
                             </p>
-                            <p data-wow-duration="1s" data-wow-delay="2.8s" class="wow fadeIn">Outside of web development, I love to do anything that engages my creativity. This includes anything from singing/playing/listening to the music of all genres, cooking, and drawing. I also have an obsession with Assassin's Creed and love everything Star Trek!</p>
+                            <p data-wow-duration="1s" data-wow-delay="2.8s" class="wow fadeIn">Outside of web development, I love to do anything that engages my creativity. This includes anything from singing/playing/listening to music of all genres, cooking, and drawing. I also have an obsession with Assassin's Creed and love everything Star Trek!</p>
                         </div>
                     </div>
                 </div>
@@ -144,98 +143,109 @@
         </section>
 
         <!-- Skills -->
-        <!-- Need to add node.js , python, and django -->
         <section class=" mb-5" id="skills">
             <h1 data-wow-duration="1s" data-wow-delay="1s" class=" wow fadeInDown text-center my-5 section-title">Skills</h1>
             <div class="section-margin">
                 <!-- Web Dev -->
-                <div data-wow-duration="1s" data-wow-delay="1.5s" class=" wow fadeInRight  container card mb-5">
+                <div data-wow-duration="1s" data-wow-delay="1.5s" class=" wow fadeInRight  container card mb-5 px-0">
                     <h2 data-wow-duration="1s" data-wow-delay="2s" class="wow fadeIn card-title text-center my-5"> Web Development</h2>
-                    <div class=" d-flex justify-content-around flex-wrap col-lg-12">
-                        <div class="flex-column text-center m-3 icon">
-                            <!-- HTML -->
+                    <div class=" d-flex justify-content-around  flex-wrap col-lg-12">
+                        <!-- HTML -->
+                        <div class="flex-column text-center web-logo-container">
                             <img data-wow-duration="1s" data-wow-delay="2.1s" class="wow fadeInRight icons" src="./images/HTML5.png" alt="Html 5 logo">
                             <p data-wow-duration="1s" data-wow-delay="2.1s" class="wow fadeInLeft mt-3 mb-4">HTML 5</p>
                         </div>
                         <!-- CSS -->
-                        <div class="flex-column text-center m-3 icons">
+                        <div class="flex-column text-center web-logo-container">
                             <img data-wow-duration="1s" data-wow-delay="2.1s" class="wow fadeInRight icons" src="./images/CSS3.png" alt="Css 3 logo">
                             <p data-wow-duration="1s" data-wow-delay="2.1s" class="wow fadeInLeft mt-3 mb-4">CSS 3</p>
                         </div>
                         <!-- JS -->
-                        <div class="flex-column text-center m-3 icons">
+                        <div class="flex-column text-center web-logo-container">
                             <img data-wow-duration="1s" data-wow-delay="2.1s" class="wow fadeInRight icons" src="./images/javaScript.png" alt="Javascript Logo">
                             <p data-wow-duration="1s" data-wow-delay="2.1s" class="wow fadeInLeft mt-3 mb-4">JavaScript</p>
                         </div>
                         <!-- Bootstrap -->
-                        <div class="flex-column text-center m-3 icons">
+                        <div class="flex-column text-center web-logo-container">
                             <img data-wow-duration="1s" data-wow-delay="2.1s" class="wow fadeInRight icons" src="./images/bootstrap.png" alt="Bootstrap Logo">
                             <p data-wow-duration="1s" data-wow-delay="2.1s" class="wow fadeInLeft mt-3 mb-4">Bootstrap</p>
                         </div>
                         <!-- React -->
-                        <div class="flex-column text-center m-3 icons">
+                        <div class="flex-column text-center web-logo-container">
                             <img data-wow-duration="1s" data-wow-delay="2.1s" class="wow fadeInRight icons" src="./images/react-dark.png" alt="React Logo">
                             <p data-wow-duration="1s" data-wow-delay="2.1s" class="wow fadeInLeft mt-3 mb-4">React</p>
                         </div>
+                        <!-- Angular -->
+                        <div class="flex-column text-center web-logo-container">
+                            <div class="logo-container">
+                                <img data-wow-duration="1s" data-wow-delay="2.1s" class="wow fadeInRight icons" src="./images/angular.png" alt="React Logo">
+                            </div>
+                            <p data-wow-duration="1s" data-wow-delay="2.1s" class="wow fadeInLeft mt-3 mb-4 text-center">Angular</p>
+                        </div>
                         <!-- Node -->
-                        <div class="flex-column text-center m-3 icons">
-                            <img data-wow-duration="1s" data-wow-delay="2.1s" class="wow fadeInRight icons" src="./images/nodeJS.png" alt="Node.js Logo">
+                        <div class="flex-column text-center web-logo-container">
+                            <div class="logo-container">
+                                <img data-wow-duration="1s" data-wow-delay="2.1s" class="wow fadeInRight icons" src="./images/nodeJS.png" alt="Node.js Logo">
+                            </div>
                             <p data-wow-duration="1s" data-wow-delay="2.1s" class="wow fadeInLeft mt-3 mb-4">Node.js</p>
                         </div>
                         <!-- Python -->
-                        <div class="flex-column text-center m-3 icons">
-                            <img data-wow-duration="1s" data-wow-delay="2.1s" class="wow fadeInRight icons" src="./images/python.png" alt="Python Logo">
+                        <div class="flex-column text-center web-logo-container">
+                            <div class="logo-container">
+                                <img data-wow-duration="1s" data-wow-delay="2.1s" class="wow fadeInRight icons" src="./images/python.png" alt="Python Logo">
+                            </div>
                             <p data-wow-duration="1s" data-wow-delay="2.1s" class="wow fadeInLeft mt-3 mb-4">Python</p>
                         </div>
                         <!-- SQL -->
-                        <div class="flex-column text-center m-3 icons">
-                            <img data-wow-duration="1s" data-wow-delay="2.1s" class="wow fadeInRight icons" src="./images/sqlite.png" alt="SQLite Logo">
+                        <div class="flex-column text-center web-logo-container">
+                            <div class="logo-container">
+                                <img data-wow-duration="1s" data-wow-delay="2.1s" class="wow fadeInRight icons" src="./images/sqlite.png" alt="SQLite Logo">
+                            </div>
                             <p data-wow-duration="1s" data-wow-delay="2.1s" class="wow fadeInLeft mt-3 mb-4">SQLite3</p>
                         </div>
                         <!-- Sass -->
-                        <div class="flex-column text-center m-3 icons second-row">
-                            <img data-wow-duration="1s" data-wow-delay="2.1s" class="wow fadeInRight icons" src="./images/sass_logo.png" alt="Sass Logo">
-                            <p data-wow-duration="1s" data-wow-delay="2.1s" class="wow fadeInLeft mt-3 mb-4">Sass</p>
+                        <div class="flex-column text-center web-logo-container">
+                            <div class="logo-container">
+                                <img data-wow-duration="1s" data-wow-delay="2.1s" class="wow fadeInRight icons"  src="./images/sass_logo.png" alt="Sass Logo">
+                            </div>
+                            <p data-wow-duration="1s" data-wow-delay="2.1s" class="wow fadeInLeft mt-3 ">Sass</p>
                         </div>
                         <!-- Less -->
-                        <div class="flex-column text-center m-3 icons second-row">
-                            <img data-wow-duration="1s" data-wow-delay="2.1s" class="wow fadeInRight icons" src="./images/less.png" alt="Less Logo">
-                            <p data-wow-duration="1s" data-wow-delay="2.1s" class="wow fadeInLeft mt-3 mb-4">Less</p>
+                        <div class="flex-column text-center web-logo-container">
+                            <div class="logo-container">
+                                <img data-wow-duration="1s" data-wow-delay="2.1s" class="wow fadeInRight icons"  src="./images/less.png" alt="Less Logo">
+                            </div>
+                            <p data-wow-duration="1s" data-wow-delay="2.1s" class="wow fadeInLeft mt-3 ">Less</p>
                         </div>  
                     </div>
                 </div>
                 <!-- Graphic and Web Software -->
-                <div data-wow-duration="1s" data-wow-delay="1s" class=" wow fadeInLeft container card " id="Software">
+                <div data-wow-duration="1s" data-wow-delay="1s" class=" wow fadeInLeft container card py-0" id="Software">
                     <h2 data-wow-duration="1s" data-wow-delay="1.5s" class="wow fadeIn card-title text-center my-5"> Graphic and Web Software</h2>
                     <div class="d-flex justify-content-around flex-wrap">
                         <!-- Photoshop -->
-                        <div class="flex-column text-center m-3 icons">
-                            <img data-wow-duration="1s" data-wow-delay="1.7s" class="wow fadeInLeft icons" src="./images/photoshop.png" alt="Adobe Photoshop logo">
+                        <div class="flex-column text-center my-3 mx-5 icons">
+                            <img data-wow-duration="1s" data-wow-delay="1.7s" class="wow fadeInLeft " src="./images/photoshop.png" alt="Adobe Photoshop logo">
                             <p data-wow-duration="1s" data-wow-delay="1.7s" class="wow fadeInRight mt-3 mb-4">Photoshop</p>
                         </div>
                         <!-- Illustrator -->
-                        <div class="flex-column text-center m-3 icons">
-                            <img data-wow-duration="1s" data-wow-delay="1.7s" class="wow fadeInLeft icons" src="./images/Illustrator.png" alt="Adobe Illustrator logo">
+                        <div class="flex-column text-center my-3 mx-5 icons">
+                            <img data-wow-duration="1s" data-wow-delay="1.7s" class="wow fadeInLeft " src="./images/Illustrator.png" alt="Adobe Illustrator logo">
                             <p data-wow-duration="1s" data-wow-delay="1.7s" class="wow fadeInRight mt-3 mb-4">Illustrator</p>
                         </div>
                         <!-- Indesign -->
-                        <div class="flex-column text-center m-3 icons">
-                            <img data-wow-duration="1s" data-wow-delay="1.7s" class="wow fadeInLeft icons" src="./images/indesign.png" alt="Adobe InDesign Logo">
+                        <div class="flex-column text-center my-3 mx-5 icons">
+                            <img data-wow-duration="1s" data-wow-delay="1.7s" class="wow fadeInLeft " src="./images/indesign.png" alt="Adobe InDesign Logo">
                             <p data-wow-duration="1s" data-wow-delay="1.7s" class="wow fadeInRight mt-3 mb-4">InDesign</p>
                         </div>
-                        <!-- Dreamweaver -->
-                        <div class="flex-column text-center m-3 icons">
-                            <img data-wow-duration="1s" data-wow-delay="1.7s" class="wow fadeInLeft icons" src="./images/dreamweaver.png" alt="Adobe DreamWeaver logo">
-                            <p data-wow-duration="1s" data-wow-delay="1.7s" class="wow fadeInRight mt-3 mb-4">DreamWeaver</p>
-                        </div>
                         <!-- XD -->
-                        <div class="flex-column text-center m-3 icons">
-                            <img data-wow-duration="1s" data-wow-delay="1.7s" class="wow fadeInLeft icons" src="./images/adobe-xd.png" alt="Adobe XD logo">
+                        <div class="flex-column text-center my-3 mx-5 graphic-icons">
+                            <img data-wow-duration="1s" data-wow-delay="1.7s" class="wow fadeInLeft " src="./images/adobe-xd.png" alt="Adobe XD logo">
                             <p data-wow-duration="1s" data-wow-delay="1.7s" class="wow fadeInRight mt-3 mb-4">Adobe XD</p>
                         </div>
                         <!-- VS Code -->
-                        <div class="flex-column text-center m-3 icons">
-                            <img data-wow-duration="1s" data-wow-delay="1.7s" class="wow fadeInLeft icons" src="./images/vs_code.png" alt="Visual Studio Code Logo">
+                        <div class="flex-column text-center my-3 mx-5 graphic-icons">
+                            <img data-wow-duration="1s" data-wow-delay="1.7s" class="wow fadeInLeft " src="./images/vs_code.png" alt="Visual Studio Code Logo">
                             <p data-wow-duration="1s" data-wow-delay="1.7s" class="wow fadeInRight mt-3 mb-4">VS Code</p>
                         </div>
                     </div>
@@ -250,7 +260,7 @@
         <section class=" mb-5" id="portfolio">
             <h1 data-wow-duration="1s" data-wow-delay="1s" class=" wow fadeInDown text-center my-5 section-title">Portfolio</h1>
             <div class="section-margin">
-                <div class="container row  mx-auto">
+                <div class="container row  mx-auto py-0">
                     <!-- 1. Weatherify -->
                     <div data-wow-duration="1s" data-wow-delay="1.2s" class="wow flipInX col-md-4 col-sm-6 col-xs-12 port">
                         <div class="card ">
@@ -294,7 +304,7 @@
                                             </div>
                                             <!-- Description -->
                                             <div class="modal-description px-4">
-                                                <p>Created as an ongoing and iterative project, the <a class="web-links" href="https://weather-app-teal.now.sh/" target="_blank">Weatherify App</a> allows users to check the current daily and weekly forecast of almost every city around the world. The <a href="https://openweathermap.org/" class="web-links" target="_blank">OpenWeather API</a> is being used to display data such as temperature, wind speed and direction, and humidity; while all icons are provided by the <a href="http://erikflowers.github.io/weather-icons/" class="web-links" target="_blank">Weather Icons </a> library.</p>
+                                                <p>Created as an ongoing and iterative project, the <a class="web-links" href="https://weather-app-teal.now.sh/" target="_blank">Weatherify App</a> allows users to check the current daily and weekly forecast of almost every city around the world. The <a href="https://openweathermap.org/" class="web-links" target="_blank">OpenWeather API</a> is being used to display data such as temperature, wind speed, direction, and humidity; while all icons are provided by the <a href="http://erikflowers.github.io/weather-icons/" class="web-links" target="_blank">Weather Icons </a> library.</p>
                                                 <ul class="pl-3 .modal-list">
                                                     <li class="p-1" >Used Axios to fetch daily and weekly weather data from the api and combined in it into one call using the <code>.all() </code> method.</li>
                                                     <li class="p-1">Using a timezone switch statement, I created a method that combines <a href="https://momentjs.com/" class="web-links">Moment</a> and <a href="https://momentjs.com/timezone/" class="web-links">Moment-Timezone</a> to dynamically change the background, application title, and icons based on the UTC Time, timezone, and weather condition code of the city as reported by the API.</li>
@@ -852,7 +862,7 @@
             <h1 data-wow-duration="1s" data-wow-delay="1s" class=" wow fadeInDown text-center my-5 section-title">Experience</h1>
             <div class="section-margin">
                 <!-- Work Experience -->
-                <div data-wow-duration="1s" data-wow-delay="1s" class=" wow fadeInUp  container card mt-5 px-4 pb-5">
+                <div data-wow-duration="1s" data-wow-delay="1s" class=" wow fadeInUp  container card mt-5 px-0 pb-5">
                     <h2 data-wow-duration="1s" data-wow-delay="1.5s" class="wow fadeIn text-center card-title mt-5 ">Work</h2>
                     <div class="timeline-block mt-3">
                         <!-- 1 -->
@@ -973,7 +983,7 @@
                             <div class="timeline"></div>
                             <div class="col-md-3 col-sm-10 left-timeline">
                                 <div class=" card-body d-flex flex-column left-wrapper">
-                                    <h4 data-wow-duration="1s" data-wow-delay=".5s" class="wow fadeInLeftBig">2019 - Present</h4>
+                                    <h4 data-wow-duration="1s" data-wow-delay=".5s" class="wow fadeInLeftBig">2019 - 2020</h4>
                                 </div>
                             </div>
                             <div class="col-md-1 icon-timeline">
